--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,3 +1,53 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: "Pretendard-normal" !important;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Pretendard-normal" !important;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  -ms-overflow-style: none;
+  background: #6e6e7c;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
 @font-face {
   font-family: "Pretendard-normal";
   font-weight: 300;
