--- a/src/style/todo.module.scss
+++ b/src/style/todo.module.scss
@@ -100,22 +100,55 @@
 // TodoInput
 .addContent {
   position: absolute;
-  transform: translate(93%, 65%);
-  width: 450px;
-  height: 300px;
-  background: $main;
-  z-index: 99999;
-}
-.input {
-  width: 300px;
-  padding: 5px;
-  border: none;
-  border-bottom: 1px solid $sub;
-  background: transparent;
-  color: $sub;
+  transform: translate(80%, 63%);
 
-  ::placeholder {
-    color: $sub;
+  width: 500px;
+  height: 300px;
+
+  border-radius: 8px;
+  background: #21212b;
+  z-index: 99999;
+
+  .title {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 30px;
+    padding: 2px 10px;
+    color: #7e7e83;
+    background: #272732;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+
+    h2 {
+      font-size: 16px;
+      margin-right: auto;
+    }
+    .close {
+      font-size: 17px;
+      font-weight: 700;
+    }
+  }
+
+  .inputContent {
+    padding: 10px;
+
+    .input {
+      width: 300px;
+      padding: 5px;
+      border: none;
+      border-bottom: 1px solid $sub;
+      background: transparent;
+      color: white;
+
+      ::placeholder {
+        color: $sub;
+      }
+
+      &:first-of-type {
+        margin-bottom: 25px;
+      }
+    }
   }
 }
 
