--- a/src/style/todo.module.scss
+++ b/src/style/todo.module.scss
@@ -9,14 +9,16 @@
   overflow-y: scroll;
 
   .todoBar {
+    position: fixed;
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 1080px;
     height: 35px;
     padding: 0 15px;
     border-radius: 5px;
     background: #20212c;
     box-shadow: 0 3px 2px 0px rgb(31, 31, 31);
+    z-index: 9999999;
 
     .hamburger {
       width: 25px;
@@ -42,6 +44,7 @@
     .contentMenu {
       width: 200px;
       height: 685px;
+      margin-top: 35px;
       padding: 20px;
       background: #20212c;
 
@@ -124,10 +127,6 @@
       font-size: 16px;
       margin-right: auto;
     }
-    .close {
-      font-size: 17px;
-      font-weight: 700;
-    }
   }
 
   .inputContent {
@@ -149,6 +148,18 @@
         margin-bottom: 25px;
       }
     }
+  }
+
+  .submitButton {
+    margin-left: 10px;
+    margin-top: 20px;
+    padding: 7px;
+    font-size: 12px;
+    font-weight: 700;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background: #9747d6;
   }
 }
 
