feat: 필요없는 주석 삭제 및 post 기능 수정

--- a/src/style/todo.module.scss
+++ b/src/style/todo.module.scss
@@ -69,6 +69,7 @@
       padding: 30px 0;
 
       .deco {
+        margin-top: 40px;
         margin-bottom: 20px;
         font-size: 35px;
         font-weight: 700;
@@ -202,6 +203,5 @@
   .content {
     padding: 20px;
     color: white;
-    cursor: pointer;
   }
 }
