--- a/src/style/todo.module.scss
+++ b/src/style/todo.module.scss
@@ -102,6 +102,12 @@
           background: #414052;
           cursor: pointer;
         }
+
+        .editText {
+          color: $sub;
+          font-size: 18px;
+          margin-bottom: 41px;
+        }
       }
     }
   }
@@ -109,9 +115,10 @@
 
 // TodoInput
 .addContent {
-  position: absolute;
-  transform: translate(80%, 63%);
-
+  position: fixed;
+  top: 480px;
+  left: 50%;
+  margin-left: -150px;
   width: 500px;
   height: 300px;
 
